# PulseDJ-X

./: .gitignore  CMakeLists.txt  README.md  README_LibraryManager.md
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
BetaPulseX/config/: deck_settings.ini  preferences.ini  settings.ini
JUCE/: JUCEExportConfig.cmake
JUCE/tools/: JUCEExportConfig.cmake  JUCEToolsExport.cmake
src/: AppConfig.h  BeatIndicator.cpp  BeatIndicator.h  BpmAnalyzer.cpp  BpmAnalyzer.h  DJAudioPlayer.cpp  DJAudioPlayer.h  DeckSettings.h  DeckWaveformOverview.cpp  DeckWaveformOverview.h  DraggableListWidget.h  GlobalBeatGrid.h  LibraryManager.cpp  LibraryManager.h  MasterLevelMonitor.cpp  MasterLevelMonitor.h  MenuBar.cpp  MenuBar.h  MenuBar_corrupted.cpp  MenuBar_new.cpp  PerformancePads.cpp  PerformancePads.h  PreferencesDialog.cpp  PreferencesDialog.h  QtDeckWidget.cpp  QtDeckWidget.h  QtMain.cpp  QtMainWindow.cpp  QtMainWindow.h  QtTurntableWidget.cpp  QtTurntableWidget.h  WaveformDisplay.cpp  WaveformDisplay.h  WaveformGenerator.cpp  WaveformGenerator.h  XmlParser.h
